syntax = "proto3";

package auth;

option go_package = "ww.sso.v1;ssov1";

service Auth{
    rpc Register (RegisterRequest) returns (RegisterResponce);
    rpc Auth (AuthRequest) returns (AuthResponce);
    rpc IsAdmin (IsAdminRequest) returns (IsAdminResponce);
}

message RegisterRequest {
    string email = 1;
    string password = 2; 
}

message RegisterResponce {
    int64 user_id = 1;
}

message AuthRequest {
    string email = 1;
    string password = 2; 
    int64 app_id = 3;
}

message AuthResponce {
    string token = 1;
}

message IsAdminRequest {
    int64 user_id = 1;
}

message IsAdminResponce {
    bool admin = 1;
}
